[package]
name = "uhd-usrp-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.69.2"
pkg-config = "0.3"
metadeps = "1.1.2"

[package.metadata.pkg-config]
uhd = "*"
